--- a/src/pages/notice/notice.html
+++ b/src/pages/notice/notice.html
@@ -12,7 +12,8 @@
                 </button>
             </ion-avatar>
             <div>
-                <div>{{item.title}}</div>
+                <div class="redPoint">{{item.title}}</div>
+                <div ></div>
                 <!-- <p *ngIf="item.info">{{item.info}}</p> -->
             </div>
             <ion-avatar item-end>
