--- a/src/pages/notice/notice.html
+++ b/src/pages/notice/notice.html
@@ -13,7 +13,8 @@
             </ion-avatar> -->
             <div>
                     <img [src]="item.src" class="iconWrap">
-                    <span style="vertical-align: middle;" class="redPoint">{{item.title}}</span>
+                    <span style="vertical-align: middle;" class="redPoint" *ngIf="item.new">{{item.title}}</span>
+                    <span style="vertical-align: middle;" *ngIf="!item.new">{{item.title}}</span>
             </div>
             
             <!-- <div class="titleWrap">
