--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,4 @@
 <ion-content>
-    <!-- <ion-tabs>
-        <ion-tab tabTitle="推荐" [root]="tab1"></ion-tab>
-        <ion-tab tabTitle="热门" [root]="tab2"></ion-tab>
-        <ion-tab tabTitle="关注" [root]="tab3"></ion-tab>
-        <ion-tab tabTitle="分类" [root]="tab4"></ion-tab>
-        <ion-tab tabTitle="分类" [root]="tab5"></ion-tab>
-        <ion-tab tabTitle="分类" [root]="tab6"></ion-tab>
-        <ion-tab tabTitle="分类" [root]="tab7"></ion-tab>
-        <ion-tab tabTitle="分类" [root]="tab8"></ion-tab>
-        <ion-tab tabTitle="分类" [root]="tab9"></ion-tab>
-        <ion-tab tabTitle="分类" [root]="tab10"></ion-tab>
-    </ion-tabs> -->
-
     <div class="slide-wrap" [style.height]="slideH">
         <ion-slides pager loop="true">
             <ion-slide *ngFor="let item of slideList" (click)="slideDetail(item.content_type,item.object_id)">
@@ -23,6 +10,44 @@
             </ion-slide>
         </ion-slides>
     </div>
+    <div>
+        <div style="overflow: hidden;padding-left:15px;padding-right: 15px;">
+            <div style="float:left;width: 36px;height: 36px;border-radius: 50%;display: inline-block;overflow: hidden;">
+                <img src="assets/img/guide3.jpg" style="width: 40px;height: 40px;">
+            </div>
+            <span style="float:left;font-size: 14px;color: #A1A1A1;margin-top: 9px;margin-left: 10px;">做一个好学生</span>
+            <span style="float:right;font-size: 13px;color: #A1A1A1;margin-top: 9px;">3分钟前</span>
+        </div>
+        <div style="width: 100%;height: 18rem;background-size: cover;background-position: 50% 50%;background-image: url('https://shishifiles.oss-cn-beijing.aliyuncs.com/media%2FTopic%2F2018%2F06%2F08%2Fbfea13c9e-b29f-4d7f-8096-e56dfb6d5dd5r_750w_750h_ss1.jpg')">
+            <div style="color: #fff;width: 80%;height: 10rem;word-break: break-all;word-wrap: break-word;white-space: normal;font-size: 2.5rem;
+            text-align: center;">
+                <div>#周末放送 | 房东的猫：美好不是奢侈，平淡亦可如诗#</div>
+            </div>
+        </div>
+        <div style="padding-left: 15px;padding-right: 15px;font-size: 13px;color: #A1A1A1;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;
+        -webkit-line-clamp: 2;-webkit-box-orient: vertical;margin-top: 5px;">
+            第一眼见到是在微博无意间看到了小黑当时还不认识他只是觉得长的也太舒服了吧，很干净清新的感觉～ 后来无意间听到了《云烟成雨》一瞬间就被疯狂的吸粉啦！真的不要太好听了。很温柔的声音。很耐听～ 过后对房东的猫从此一发不可收拾～
+        </div>
+        <div style="padding-left: 15px;padding-right: 15px;margin-top: 10px;">
+            <div style="float: left;">
+                <img src="assets/img/fire.png" style="width: 15px;height: 18px;    vertical-align: middle;">
+                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;    vertical-align: middle;">22</span>
+            </div>
+            <div style="float: right;">
+                <img src="assets/img/likehome.png" style="width: 16px;height: 16px;    vertical-align: middle;">
+                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;vertical-align: middle;">32</span>
+            </div>
+            <div style="float: right;">
+                <img src="assets/img/commenthome.png" style="width: 16px;height: 16px;    vertical-align: middle;">
+                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;margin-right: 10px;vertical-align: middle;">32</span>
+            </div>
+            <div style="float: right;">
+                <img src="assets/img/zanhome.png" style="width: 16px;height: 16px;    vertical-align: middle;">
+                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;margin-right: 10px;vertical-align: middle;">32</span>
+            </div>
+        </div>
+    </div>
+
     <!--日记列表-->
     <ion-list class="diary-list">
         <div *ngFor="let diary of diaryList">
