--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -21,27 +21,47 @@
             </ion-segment-button>
         </ion-segment>
     </ion-toolbar> -->
-    <ion-toolbar mode="md">
-        <ion-segment #segments mode="md" [(ngModel)]="page">
-            <ion-segment-button class="tabText" value="0" (click)="selectedTab(0)">
-                推荐
-            </ion-segment-button>
-            <ion-segment-button class="tabText" value="1" (click)="selectedTab(1)">
-                热门
-            </ion-segment-button>
-            <ion-segment-button class="tabText" value="2" (click)="selectedTab(2)">
-                关注
-            </ion-segment-button>
-            <ion-segment-button class="tabText" value="3" (click)="selectedTab(3)">
-                分类
-            </ion-segment-button>
-            <ion-segment-button class="tabText" value="4" (click)="selectedTab(4)">
-                分类2
-            </ion-segment-button>
-        </ion-segment>
-    </ion-toolbar>
+    <!-- <ion-segment #segments mode="md" [(ngModel)]="page">
+        <ion-segment-button class="tabText" value="0" (click)="selectedTab(0)">
+            测试1
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="1" (click)="selectedTab(1)">
+            测试2
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="2" (click)="selectedTab(2)">
+            测试3
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="3" (click)="selectedTab(3)">
+            测试4
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="4" (click)="selectedTab(4)">
+            测试5
+        </ion-segment-button>
+    </ion-segment> -->
 </ion-header>
 <ion-content>
+    <!-- <ion-segment #segments mode="md" [(ngModel)]="page.pageString">
+        <ion-segment-button class="tabText" value="0" (click)="selectedTab(0)">
+            测试1
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="1" (click)="selectedTab(1)">
+            测试2
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="2" (click)="selectedTab(2)">
+            测试3
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="3" (click)="selectedTab(3)">
+            测试4
+        </ion-segment-button>
+        <ion-segment-button class="tabText" value="4" (click)="selectedTab(4)">
+            测试5
+        </ion-segment-button>
+    </ion-segment> -->
+    <ion-segment #segments mode="md" [(ngModel)]="page.pageString">
+        <ion-segment-button class="tabText" *ngFor="let item of tabs.tabsIndex" value="{{item.tabsValue}}" (click)="selectedTab(item.tabsValue)">
+            {{item.tabslabel}}
+        </ion-segment-button>
+    </ion-segment>
     <ion-slides #slider (ionSlideDidChange)="slideChanged()">
         <ion-slide>
             <h1>Tab 1</h1>
