--- a/src/pages/article-info/article-info.html
+++ b/src/pages/article-info/article-info.html
@@ -15,12 +15,12 @@
                 <ion-icon name="star-outline" class="star" *ngIf="!hasCollected"></ion-icon>
             </button>
         </ion-buttons>
-        <ion-buttons end style="margin-right:15px;">
+        <!-- <ion-buttons end style="margin-right:15px;">
             <button ion-button clear (click)="like()">
                 <ion-icon name="heart-outline" class="sc" *ngIf="!hasZan"></ion-icon>
                 <ion-icon name="heart" class="sc1" *ngIf="hasZan"></ion-icon>
             </button>
-        </ion-buttons>
+        </ion-buttons> -->
     </ion-navbar>
 </ion-header>
 <ion-content>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="reply-info">
                         <div (click)="goMe(item.userId)" class="name">{{item.userName}}</div>
-                        <p class="time">16:32</p>
+                        <p class="time">{{item.time}}</p>
                         <!-- <div class='reply-pp' [ngStyle]="{'background-color':item.sex === 0 ? '#ff3399' : '#488aff' }">{{item.pp}}匹配</div> -->
                     </div>
                     <p class="friend">好友</p>
@@ -55,26 +55,27 @@
             <div style="position: relative;padding-left: 46px;">
                 <p (click)="commentDetail(item.id)" class="replycontent">{{item.reply}}</p>
                 <div class="mainimg">
-                    <div *ngFor="let img of item.plimg" class="imgdiv">
+                    <!-- <div *ngFor="let img of item.plimg" class="imgdiv">
                         <img [src]="img">
-                    </div>
+                    </div> -->
+                    <ss-comment-attachments *ngIf="item.plimg.length" [attachments]="item.plimg" [bigImage]="true" style="width: 100%;"></ss-comment-attachments>
                 </div>
                 <div class="commentWrap">
                     <img src="assets/img/comment1.png" class="commentImg" (click)="addComment(i,item.id)">
                     <img src="assets/img/zan.png" class="zanImg" (click)="commentZan(item.id)" *ngIf="!item.commentZan">
-                    <img src="assets/img/zan1.png" class="zanImg" *ngIf="item.commentZan" >
+                    <img src="assets/img/zan1.png" class="zanImg" *ngIf="item.commentZan">
                     <span class="zanNum">{{item.zan}}</span>
                 </div>
             </div>
             <div *ngFor="let addzan of item.addZan" style="margin-left:45px;padding-top:10px;border-top:1px solid rgb(236, 234, 234);">
                 <div class="reply-user" style="margin-top: 5px;">
                     <div class="reply-head">
-                        <div class="reply-head-img" style="width: 40px;height: 40px;">
+                        <div class="reply-head-img" style="width: 35px;height: 35px;">
                             <img src="{{addzan.user.avatar}}" (click)="goMe(addzan.user.id)">
                         </div>
                         <div class="reply-info">
-                            <div (click)="goMe(addzan.user.id)" class="name">{{addzan.user.userName}}</div>
-                            <p class="time">16:32</p>
+                            <div (click)="goMe(addzan.user.id)" class="name">{{addzan.user.username}}</div>
+                            <p class="time">{{addzan.time}}</p>
                         </div>
                     </div>
                 </div>
@@ -86,7 +87,7 @@
                         </div>
                     </div>
                     <div class="commentWrap">
-                        <img src="assets/img/zan1.png" class="zanImg" *ngIf="addzan.commentZan" >
+                        <img src="assets/img/zan1.png" class="zanImg" *ngIf="addzan.commentZan">
                         <img src="assets/img/zan.png" class="zanImg" *ngIf="!addzan.commentZan" (click)="addCommentZan(i,addzan.id)">
                         <span class="zanNum">{{addzan.like_count}}</span>
                     </div>
@@ -118,13 +119,14 @@
         </div>
     </div> -->
     <div style="overflow: hidden;position: fixed;bottom: 0;left: 0;width: 100%;background-color: #fff;height: 50px;padding-top: 10px;padding-bottom: 10px;border-top: 1px solid #EAEAEA;">
-        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;">
+        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;" (click)="makeComment()">
             <img src="assets/img/comment1.png" style="width: 21px;height: 21px;vertical-align: middle">
             <span style="font-size: 14px;color: #9F9F9F;margin-left: 5px;vertical-align: middle;">评论</span>
         </div>
         <div style="float:right;width: 50%;display: inline-block;line-height: 30px;text-align: center;">
-            <img src="assets/img/zan.png" style="width: 21px;height: 21px;vertical-align: middle;">
-            <span style="font-size: 14px;color: #9F9F9F;vertical-align: middle;margin-left: 5px;">赞</span>            
-         </div>
+            <img src="assets/img/zan.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="!hasZan" (click)="like()">
+            <img src="assets/img/zan1.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="hasZan">
+            <span style="font-size: 14px;color: #9F9F9F;vertical-align: middle;margin-left: 5px;">赞</span>
+        </div>
     </div>
 </ion-content>
