--- a/src/pages/record-info/record-info.html
+++ b/src/pages/record-info/record-info.html
@@ -11,6 +11,16 @@
     </ion-slides>
     <div class='record-wrp'>
         <div class='record-comment'>
+            <p style="font-size: 12px;color: #F6AFAF;">日记</p>
+            <div style="color: #717171;font-size: 15px;">{{info.title}}</div>
+            <div style="overflow: hidden;">
+                <div style="width: 40px;height: 40px;border-radius: 50%;float: left;overflow: hidden;">
+                    <!-- <img src="{{info.avatar}}" style="width: 40px;height: 40px;"> -->
+                    <img src="assets/img/guide3.jpg" style="width: 40px;height: 40px;">
+                </div>
+                <span style="font-size: 13px;color: #9D9D9D;">{{info.username}}</span>
+                <span style="display: inline-block;width: 60px;height: 40px;border:1px solid #F7C2C2;border-radius: 3px;font-size: 13px;color: #F18D8D;text-align: center;line-height: 40px;">关注</span>
+            </div>
             <div class='record-article'>
                 <p class='acticle-title'>{{info.content}}</p>
             </div>
@@ -22,24 +32,18 @@
                 </div>
             </div>
         </div>
-        <div class="acticle-reply">
+        <!-- <div class="acticle-reply">
             <div *ngFor="let item of comment" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
                 <div class="reply-user">
                     <div class="reply-head">
                         <div class="reply-head-img">
-                            <!-- <img src="assets/img/avatar/girl-avatar.png"> -->
                             <img src="{{item.userImg}}" (click)="goMe(item.userId)">
                         </div>
                         <div class="reply-info">
                             <div (click)="goMe(item.userId)">{{item.userName}}</div>
-                            <!-- <div class='reply-pp' [ngStyle]="{'background-color':item.like_count === 0 ? '#ff3399' : '#488aff' }">匹配</div> -->
                         </div>
                     </div>
                     <div>
-                        <!-- <span class="reply-text"><ion-icon ios="ios-thumbs-up-outline" md="ios-thumbs-up-outline">
-            </ion-icon>&nbsp;&nbsp;{{item.zan}}</span> -->
-                        <!-- <span class="reply-text"><ion-icon ios="ios-thumbs-down-outline" md="ios-thumbs-down-outline">
-            </ion-icon>{{item.fou}}</span> -->
                         <span class="reply-text"><ion-icon ios="ios-chatbubbles-outline" md="ios-chatbubbles-outline">
             </ion-icon>&nbsp;&nbsp;{{item.info}}</span>
                     </div>
@@ -57,14 +61,88 @@
                 <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
                 </ion-infinite-scroll-content>
             </ion-infinite-scroll>
-        </div>
-        <div class="article-wrp">
+        </div> -->
+        <!-- <div class="article-wrp">
             <div class="article-btn">
                 <button ion-button round color="ss-primary" (click)="makeComment()">
                     <ion-icon ios="ios-create-outline" md="ios-create-outline"></ion-icon><span>说说我的想法</span>
                 </button>
             </div>
+        </div> -->
+        <div class="acticle-reply" style="padding-bottom: 55px;">
+            <div *ngFor="let item of comment;index as i;" style="padding-top:10px;padding-bottom:10px;border-bottom:1px solid #DEDEDE;">
+                <div class="reply-user">
+                    <div class="reply-head">
+                        <div class="reply-head-img">
+                            <img src="{{item.userImg}}" (click)="goMe(item.userId)">
+                        </div>
+                        <div class="reply-info">
+                            <div (click)="goMe(item.userId)" class="name">{{item.userName}}</div>
+                            <p class="time">{{item.time}}</p>
+                        </div>
+                        <p class="friend">好友</p>
+                    </div>
+                </div>
+                <div style="position: relative;padding-left: 46px;">
+                    <p (click)="commentDetail(item.id)" class="replycontent">{{item.reply}}</p>
+                    <!-- <div class="mainimg">
+                        <ss-comment-attachments *ngIf="item.plimg.length" [attachments]="item.plimg" [bigImage]="true" style="width: 100%;"></ss-comment-attachments>
+                    </div> -->
+                    <div class="commentWrap">
+                        <img src="assets/img/comment1.png" class="commentImg" (click)="addComment(i,item.id)">
+                        <img src="assets/img/zan.png" class="zanImg" (click)="commentZan(item.id)" *ngIf="!item.commentZan">
+                        <img src="assets/img/zan1.png" class="zanImg" *ngIf="item.commentZan">
+                        <span class="zanNum">{{item.zan}}</span>
+                    </div>
+                </div>
+                <div *ngFor="let addzan of item.addZan" style="margin-left:45px;padding-top:10px;border-top:1px solid rgb(236, 234, 234);">
+                    <div class="reply-user" style="margin-top: 5px;">
+                        <div class="reply-head">
+                            <div class="reply-head-img" style="width: 35px;height: 35px;">
+                                <img src="{{addzan.user.avatar}}" (click)="goMe(addzan.user.id)">
+                            </div>
+                            <div class="reply-info">
+                                <div (click)="goMe(addzan.user.id)" class="name">{{addzan.user.username}}</div>
+                                <p class="time">{{addzan.time}}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="position: relative;">
+                        <p class="replycontent">{{addzan.content}}</p>
+                        <div class="commentWrap">
+                            <img src="assets/img/zan1.png" class="zanImg" *ngIf="addzan.commentZan">
+                            <img src="assets/img/zan.png" class="zanImg" *ngIf="!addzan.commentZan" (click)="addCommentZan(i,addzan.id)">
+                            <span class="zanNum">{{addzan.like_count}}</span>
+                        </div>
+                    </div>
+                </div>
+                <div style="margin-left:45px;border-top:1px solid rgb(236, 234, 234);" *ngIf="item.addZanAction">
+                    <div style="overflow: hidden;margin-top: 10px;">
+                        <div class="reply-head-img" style="width: 40px;height: 40px;float: left;">
+                            <img src="assets/img/guide1.jpg">
+                        </div>
+                        <ion-textarea placeholder="Enter a description" [(ngModel)]="item.addZanContent" style="border: 1px solid rgb(236, 234, 234);border-radius: 3px;float: right;width: 80%;"></ion-textarea>
+                    </div>
+                    <div style="overflow: hidden;">
+                        <p style="font-size: 14px;color: #fff;background-color:#EF7A7A;width: 40px;height: 25px;line-height: 25px;text-align: center;float: right;border-radius: 3px;" (click)="submitAddZan(i,item.id)">发布</p>
+                    </div>
+                </div>
+            </div>
+            <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+                <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="加载中...">
+                </ion-infinite-scroll-content>
+            </ion-infinite-scroll>
         </div>
     </div>
-    <!-- <record-footer></record-footer> -->
+    <div style="overflow: hidden;position: fixed;bottom: 0;left: 0;width: 100%;background-color: #fff;height: 50px;padding-top: 10px;padding-bottom: 10px;border-top: 1px solid #EAEAEA;">
+        <div style="float: left;width: 50%;display: inline-block;border-right:1px solid #EAEAEA;height: 30px;line-height: 30px;text-align: center;" (click)="makeComment()">
+            <img src="assets/img/comment1.png" style="width: 21px;height: 21px;vertical-align: middle">
+            <span style="font-size: 14px;color: #9F9F9F;margin-left: 5px;vertical-align: middle;">评论</span>
+        </div>
+        <div style="float:right;width: 50%;display: inline-block;line-height: 30px;text-align: center;">
+            <img src="assets/img/zan.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="!hasZan" (click)="like()">
+            <img src="assets/img/zan1.png" style="width: 21px;height: 21px;vertical-align: middle;" *ngIf="hasZan">
+            <span style="font-size: 14px;color: #9F9F9F;vertical-align: middle;margin-left: 5px;">赞</span>
+        </div>
+    </div>
 </ion-content>
