--- a/src/pages/hotlist/articlehotlist/articlehotlist.html
+++ b/src/pages/hotlist/articlehotlist/articlehotlist.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 5px;border-bottom: 1px solid #F5F5F5;">
+    <div style="padding-left: 15px;padding-right: 15px;padding-bottom: 5px;border-bottom: 1px solid #F5F5F5;margin-top: 10px;">
         <div style="overflow: hidden;">
             <span style="float: left;color: #F07E7E;font-size: 14px;margin-top: 2px;margin-right: 2%;">1</span>
             <div style="float: left;margin-right: 2%;width: 73%;">
