--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,86 +1,41 @@
 <ion-content>
-    <div class="slide-wrap" [style.height]="slideH">
-        <ion-slides pager loop="true">
-            <ion-slide *ngFor="let item of slideList" (click)="slideDetail(item.content_type,item.object_id)">
-                <ion-card class="ss-full-card">
-                    <img class="image-box" [ngStyle]="{'background-image': 'url(' + item.image + ')'}" />
-                    <div class="slide-text card-title" padding-left padding-right>{{item.title}}</div>
-                    <div class="slide-text card-subtitle" padding-left padding-right>{{item.subTitle}}</div>
-                </ion-card>
-            </ion-slide>
-        </ion-slides>
-    </div>
-    <div>
-        <div style="overflow: hidden;padding-left:15px;padding-right: 15px;">
-            <div style="float:left;width: 36px;height: 36px;border-radius: 50%;display: inline-block;overflow: hidden;">
-                <img src="assets/img/guide3.jpg" style="width: 40px;height: 40px;">
+    <ion-segment #segments mode="md" [(ngModel)]="page.pageString" style="width: 80%;display: inline-block;vertical-align: middle;">
+        <ion-segment-button class="tabText" *ngFor="let item of tabs" value="{{item.tabsValue}}" (click)="selectedTab(item.tabsValue)">
+            {{item.tabslabel}}
+        </ion-segment-button>
+    </ion-segment>
+    <img src="assets/img/guide1.jpg" style="width: 20px;height: 20px;vertical-align: middle;" (click)="goTabSelect()">
+    <ion-slides #slider (ionSlideDidChange)="slideChanged()">
+        <ion-slide style="display: block;text-align: left;" >
+            <div class="slide-wrap" [style.height]="slideH">
+                <ion-slides pager loop="true">
+                    <ion-slide *ngFor="let item of slideList" (click)="slideDetail(item.content_type,item.object_id)">
+                        <ion-card class="ss-full-card">
+                            <img class="image-box" [ngStyle]="{'background-image': 'url(' + item.image + ')'}" />
+                            <div class="slide-text card-title" padding-left padding-right>{{item.title}}</div>
+                            <div class="slide-text card-subtitle" padding-left padding-right>{{item.subTitle}}</div>
+                        </ion-card>
+                    </ion-slide>
+                </ion-slides>
             </div>
-            <span style="float:left;font-size: 14px;color: #A1A1A1;margin-top: 9px;margin-left: 10px;">做一个好学生</span>
-            <span style="float:right;font-size: 13px;color: #A1A1A1;margin-top: 9px;">3分钟前</span>
-        </div>
-        <div style="width: 100%;height: 18rem;background-size: cover;background-position: 50% 50%;background-image: url('https://shishifiles.oss-cn-beijing.aliyuncs.com/media%2FTopic%2F2018%2F06%2F08%2Fbfea13c9e-b29f-4d7f-8096-e56dfb6d5dd5r_750w_750h_ss1.jpg')">
-            <div style="color: #fff;width: 80%;height: 10rem;word-break: break-all;word-wrap: break-word;white-space: normal;font-size: 2.5rem;
-            text-align: center;">
-                <div>#周末放送 | 房东的猫：美好不是奢侈，平淡亦可如诗#</div>
-            </div>
-        </div>
-        <div style="padding-left: 15px;padding-right: 15px;font-size: 13px;color: #A1A1A1;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;
-        -webkit-line-clamp: 2;-webkit-box-orient: vertical;margin-top: 5px;">
-            第一眼见到是在微博无意间看到了小黑当时还不认识他只是觉得长的也太舒服了吧，很干净清新的感觉～ 后来无意间听到了《云烟成雨》一瞬间就被疯狂的吸粉啦！真的不要太好听了。很温柔的声音。很耐听～ 过后对房东的猫从此一发不可收拾～
-        </div>
-        <div style="padding-left: 15px;padding-right: 15px;margin-top: 10px;">
-            <div style="float: left;">
-                <img src="assets/img/fire.png" style="width: 15px;height: 18px;    vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;    vertical-align: middle;">22</span>
-            </div>
-            <div style="float: right;">
-                <img src="assets/img/likehome.png" style="width: 16px;height: 16px;    vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;vertical-align: middle;">32</span>
-            </div>
-            <div style="float: right;">
-                <img src="assets/img/commenthome.png" style="width: 16px;height: 16px;    vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;margin-right: 10px;vertical-align: middle;">32</span>
-            </div>
-            <div style="float: right;">
-                <img src="assets/img/zanhome.png" style="width: 16px;height: 16px;    vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;margin-right: 10px;vertical-align: middle;">32</span>
-            </div>
-        </div>
-    </div>
-    <div>
-        <div style="overflow: hidden;padding-left:15px;padding-right: 15px;width: 100%;">
-            <div style="float:left;width: 36px;height: 36px;border-radius: 50%;display: inline-block;overflow: hidden;">
-                <img src="assets/img/guide3.jpg" style="width: 40px;height: 40px;">
-            </div>
-            <span style="float:left;font-size: 14px;color: #A1A1A1;margin-top: 9px;margin-left: 10px;">做一个好学生</span>
-            <span style="float:right;font-size: 13px;color: #A1A1A1;margin-top: 9px;">3分钟前</span>
-        </div>
-        <div style="overflow: hidden;padding-left:15px;padding-right: 15px;margin-top: 10px;">
-            <p style="font-size: 15px;color: #9C9C9C;">歌单分享 | 和我一样爱陈粒的举手♥️</p>
-            <p style="font-size: 13px;color: #A1A1A1;margin-top: 5px;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;">456</p>
-        </div>
-        <ss-comment-attachments *ngIf="testImg1.length" [attachments]="testImg1"></ss-comment-attachments>
-        <div style="padding-left: 15px;padding-right: 15px;margin-top: 10px;">
-            <div style="float: left;">
-                <img src="assets/img/fire.png" style="width: 15px;height: 18px;vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;    vertical-align: middle;">22</span>
-            </div>
-            <div style="float: right;">
-                <img src="assets/img/likehome.png" style="width: 16px;height: 16px;vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;vertical-align: middle;">32</span>
-            </div>
-            <div style="float: right;">
-                <img src="assets/img/commenthome.png" style="width: 16px;height: 16px;vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;margin-right: 10px;vertical-align: middle;">32</span>
-            </div>
-            <div style="float: right;">
-                <img src="assets/img/zanhome.png" style="width: 16px;height: 16px;vertical-align: middle;">
-                <span style="color: #A1A1A1;font-size: 12px;margin-left: 2px;margin-right: 10px;vertical-align: middle;">32</span>
-            </div>
-        </div>
-    </div>
+            <article></article>
+            <diary></diary>
+        </ion-slide>
+        <!-- <ion-slide>
+            <h1>Tab 2</h1>
+        </ion-slide>
+        <ion-slide>
+            <h1>Tab 3</h1>
+        </ion-slide>
+        <ion-slide>
+            <h1>Tab 4</h1>
+        </ion-slide>
+        <ion-slide>
+            <h1>Tab 5</h1>
+        </ion-slide> -->
+    </ion-slides>
     <!--日记列表-->
-    <ion-list class="diary-list">
+    <!-- <ion-list class="diary-list">
         <div *ngFor="let diary of diaryList">
             <ion-item class="topicItem" *ngIf="diary.content_type == 'topic'" (click)="goTopicDetail(diary.object_id)">
                 <div class="image-box" [ngStyle]="{'background-image': 'url(' +  diary.image_set[0] + ')'}">
@@ -126,5 +81,5 @@
     </ion-list>
     <ion-infinite-scroll [enabled]="enabled" threshold="100px" (ionInfinite)="$event.waitFor(doInfinite($event))">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+    </ion-infinite-scroll> -->
 </ion-content>
