--- a/src/pages/home/mark/mark.html
+++ b/src/pages/home/mark/mark.html
@@ -1,3 +1,37 @@
+<ion-header>
+    <ion-navbar>
+        <ion-title>全部分类</ion-title>
+    </ion-navbar>
+</ion-header>
 <ion-content>
-    123
+    <p class="markType">我的分类</p>
+    <div class="markWrap">
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+    </div>
+    <p class="markType">街舞</p>
+    <div class="markWrap">
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+        <span class="mark">推荐</span>
+    </div>
 </ion-content>
