--- a/src/pages/tabs-page/tabs-page.html
+++ b/src/pages/tabs-page/tabs-page.html
@@ -1,5 +1,5 @@
 <ion-tabs #myTabs [selectedIndex]="mySelectedIndex" name="conference">
-    <ion-tab tabsHideOnSubPages="true" [root]="tab1Root" tabTitle="首页" tabIcon="home" tabUrlPath="conference-schedule"></ion-tab>
+    <ion-tab tabsHideOnSubPages="true" [root]="tab1Root" tabTitle="首页" tabIcon="home"></ion-tab>
     <ion-tab tabsHideOnSubPages="true" [root]="tab2Root" tabTitle="精选" tabIcon="rose"></ion-tab>
     <ion-tab tabsHideOnSubPages="true" [root]="tab3Root" tabTitle="" tabIcon=""></ion-tab>
     <ion-tab tabsHideOnSubPages="true" [root]="noticePage" tabTitle="消息" tabIcon="notifications"></ion-tab>
