--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
   </script>
 
   <link href="build/main.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./assets/DanmuPlayer/danmuplayer.css">
+  <link rel="stylesheet" href="./assets/BulletPlayer/bulletPlayer.min.css" />
+  <script src="./assets/BulletPlayer/bulletPlayer.canvas.min.js"></script>
 </head>
 
 <body>
@@ -39,8 +40,6 @@
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
-  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./assets/DanmuPlayer/danmuplayer.min.js"></script>
   <!-- The bundle js is generated during the build process -->
   <script src="build/vendor.js"></script>
 
