--- a/src/pages/home/mark/mark.html
+++ b/src/pages/home/mark/mark.html
@@ -12,4 +12,5 @@
     <div class="markWrap" [sortablejs]="normalList1" [sortablejsOptions]="normalOptions">
         <span class="mark" *ngFor="let item of type1">{{item}}</span>
     </div>
+    <div id="dplayer"></div>
 </ion-content>
